2nd commit ngekkkk

--- a/myFirstWebPageV2.html
+++ b/myFirstWebPageV2.html
@@ -17,7 +17,7 @@
         Accent 2: #FFC93C
         
         */
-
+        /* ngekkkkkk */
       .header {
         /* background-color: #0081C9; */
         height: 80vh; /*vh means viewport height*/
