--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <div>Hi this is XTIAN! this is my portfolio site</div>
+  <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quisquam ex quae culpa tempore dolorem?</div>
 </body>
 </html>
